# NovaSchoolOS

./: .gitignore  Cargo.toml  rust-toolchain.toml
docs/: architecture.md  handbook.md  syscalls.md
drivers/: Cargo.toml
drivers/src/: disk.rs  input.rs  lib.rs  mutex.rs  network.rs  vga.rs
filesystem/: Cargo.toml
filesystem/src/: ext2.rs  fat32.rs  lib.rs  novafs.rs
filesystem/tests/: fs_tests.rs
gui/: Cargo.toml
gui/src/: assistant.rs  classroom.rs  gui_app.rs  lib.rs  widgets.rs
kernel/: Cargo.toml
kernel/src/: boot.rs  interrupts.rs  ipc.rs  lib.rs  main.rs  mem.rs  mutex.rs  scheduler.rs  security.rs  sync.rs  syscall.rs  task.rs
kernel/tests/: concurrency_tests.rs  mem_tests.rs  scheduler_tests.rs
networking/: Cargo.toml
networking/src/: ipv4.rs  lib.rs  ssh.rs  tcp.rs
scripts/: build.ps1  build.sh  build_bootimage.ps1  run_simulator.ps1
shell/: Cargo.toml
shell/src/: lib.rs
src/: main.rs
userspace/: Cargo.toml
userspace/src/: lib.rs  novapkg.rs
