[package]
name = "novaschool_os"
version = "0.1.0"
edition = "2021"
authors = ["NovaSchool OS Architects"]
description = "A secure, educational, Unix-like operating system in Rust."

[workspace]
members = [
    "kernel",
    "drivers",
    "filesystem",
    "networking",
    "shell",
    "userspace",
    "gui"
]

[dependencies]
kernel = { path = "kernel" }
drivers = { path = "drivers" }
filesystem = { path = "filesystem" }
networking = { path = "networking" }
shell = { path = "shell" }
userspace = { path = "userspace" }
gui = { path = "gui", optional = true }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["gui-window"]
tui = ["dep:gui", "gui/tui", "dep:crossterm", "dep:ratatui"]
gui-window = ["dep:gui", "gui/gui-window"]
