[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel" }
shell = { path = "../shell" }
userspace = { path = "../userspace" }
networking = { path = "../networking" }
drivers = { path = "../drivers" }
filesystem = { path = "../filesystem" }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.26", default-features = false, features = ["crossterm"], optional = true }
eframe = { version = "0.27", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["gui-window"]
tui = ["dep:crossterm", "dep:ratatui"]
gui-window = ["dep:eframe"]
